--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,11 +25,11 @@
       <div class="col-md-6 mt-md-0 mt-3">
         <!-- Content -->
         <h5 class="text-uppercase">Developed by</h5>
-        <small>Harsh Gahlot & Ayushi</small>
+        <small>Devarsh Soni,Shah Vedant& Shah Vinit</small>
         <br>
-        <small>1MV17CS038-1MV17CS022</small>
+        <small>23BECE30610,23BECE30600&23BECE30601</small>
         <br>
-        <small>Department of Computer Science & Engineering</small>
+        <small>Department of Computer Engineering</small>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none pb-3">
@@ -63,8 +63,8 @@
   </div>
   <!-- Footer Links -->
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2019 Copyright:
-    <a href="#"> CS038-CS022</a>
+  <div class="footer-copyright text-center py-3">©  Copyright:
+    <a href="#"> 2025-2026</a>
   </div>
   <!-- Copyright -->
 
@@ -72,7 +72,7 @@
 <!-- Footer -->
   <!-- <footer id="sticky-footer" class="py-4 bg-dark text-white-50" style="background-color:#932007">
     <div class="container text-center">
-      <small>Copyright &copy; Harsh Gahlot(1MV17CS038) & Ayushi(1MV17CS022)</small>
+      <small>Copyright &copy; Devarsh Soni(23BECE30610),Shah Vedant(23BECE30600 & Shah Vinit(23BECE30601)</small>
     </div>
   </footer> -->
   </body>
