--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 
 <div class="jumbotron text-centre" style="background-color:#f7f7f7;">
-  <h1>Welcome to Blood-Bank Monitoring System</h1>
+  <h1>Welcome to Blood-Bank Management System</h1>
   <img src="{{url_for('static',filename='images.jpeg')}}" alt="Donate blood" width="1050" height="250" style="padding:15px;">
   <p>Most people are able to give blood, but only 4% actually do. You can donate blood if you:
 <ul style="list-style-type:square">
